--- a/.gitignore
+++ b/.gitignore
@@ -9,22 +9,10 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.idea
 .Python
 env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -42,25 +30,11 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
 
-# Translations
-*.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
+
 
 # Sphinx documentation
 docs/_build/
@@ -68,14 +42,11 @@ docs/_build/
 # PyBuilder
 target/
 
-# IPython Notebook
-.ipynb_checkpoints
 
 # pyenv
 .python-version
 
-# celery beat schedule file
-celerybeat-schedule
+
 
 # dotenv
 .env
@@ -84,8 +55,3 @@ celerybeat-schedule
 venv/
 ENV/
 
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
