--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ __pycache__/
 .idea
 .Python
 env/
-.idea
+.idea/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
