--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__/
 .Python
 env/
 .idea/
+**/.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -30,11 +31,6 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
-
-
-
-
-
 
 # Sphinx documentation
 docs/_build/
